[package]
name = "telegpt"
description = "A Telegram interface for GPT-3"
version = "0.1.0"
edition = "2021"
authors = ["GustavEkberg"]

[dependencies]
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.85"
dotenvy = "0.15.6"
reqwest = "0.11.14"
surrealdb = "1.0.0-beta.8"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.8", features = ["full"] }
chrono = "0.4.24"
scraper = "0.15.0"
regex = "1.7.3"
